# Praedixa

./: .checkov.yml  .dependency-cruiser.api.cjs  .dependency-cruiser.cjs  .deptry.toml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .lighthouserc.json  .pa11yci.json  .pre-commit-config.yaml  .prettierignore  .semgrepignore  .trivyignore  AGENTS.md  API.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  WORKFLOW.md  docker-compose.sonarqube.yml  docker-compose.yml  eslint.config.js  knip.json  osv-scanner.toml  outreach-templates-csuite.md  package.json  pitch-deck-v2.html  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  render.yaml  sonar-project.properties  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.setup.ts
app-api/: .env.example  .gitignore  .importlinter  .trivyignore  Dockerfile  README.md  SECURITY_AUDIT_2026-03-08.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
app-api/alembic/: README.md  env.py
app-api/alembic/versions/: 001_initial_schema.py  002_pgcrypto_extension.py  003_data_catalog_enums.py  004_data_catalog_tables.py  005_fit_parameters_immutability.py  006_role_architecture.py  007_rls_policies.py  008_file_upload_ingestion.py  009_quality_report.py  010_admin_backoffice.py  011_features_access_control.py  012_operational_layer.py  013_rls_hardening.py  014_merge_schemas.py  015_add_user_site_id.py  016_decision_engine_v2_fields.py  017_conversations.py  018_daily_forecast_capacity_curves.py  019_remove_orphan_models.py  020_ingestion_log_watermark.py  021_rgpd_erasure_persistence.py  022_super_admin_rls_bypass.py  023_contact_requests.py  024_rename_auth_user_id_column.py  025_mlops_registry_and_inference_jobs.py  026_integration_platform_foundation.py  027_decisionops_runtime_persistence.py  028_onboarding_bpm_foundation.py  029_onboarding_camunda_only.py  030_admin_actor_auth_fallback.py  031_admin_delete_org_audit_action.py  032_admin_audit_target_org_history.py  033_onboarding_source_runs.py  597a0ce523b5_grant_create_on_database_to_owner.py  README.md
app-api/app/: README.md  main.py
app-api/app/core/: README.md  auth.py  config.py  database.py  ddl_connection.py  ddl_validation.py  dependencies.py  exceptions.py  jwt_decoder.py  key_management.py  middleware.py  pagination.py  pipeline_config.py  rate_limit.py  request_id.py  security.py  telemetry.py  yaml_validation.py
app-api/app/integrations/: README.md  __init__.py  provider_sync.py
app-api/app/models/: README.md  __init__.py  admin.py  base.py  contact_request.py  conversation.py  daily_forecast.py  data_catalog.py  decision.py  decisionops_runtime.py  forecast_run.py  integration.py  mlops.py  onboarding_case.py  operational.py  organization.py  user.py
app-api/app/routers/: admin.py  admin_alerts_overview.py  admin_audit.py  admin_billing.py  admin_canonical.py  admin_conversations.py  admin_cost_params.py  admin_data.py  admin_decisions_enhanced.py  admin_models.py  admin_monitoring.py  admin_onboarding.py  admin_operational.py  admin_orgs.py  admin_proof_packs.py  admin_scenarios.py  admin_users.py  analytics.py  arbitrage.py  canonical.py  contact_requests.py  conversations.py  cost_parameters.py  coverage_alerts.py  dashboard.py  datasets.py  datasets_crud.py  datasets_ingestion.py  decision_workspace.py  decisions.py  exports.py  forecasts.py  health.py  live_client.py  operational_decisions.py  organizations.py  product_events.py  proof.py  user_preferences.py
app-api/app/schemas/: README.md  __init__.py  admin.py  arbitrage.py  compat.py  contact_requests.py  conversation.py  dashboard.py  data_catalog.py  department.py  forecast.py  mlops.py  operational.py  responses.py  ux.py
app-api/app/services/: README.md  __init__.py  admin_audit.py  admin_billing.py  admin_monitoring.py  admin_onboarding.py  admin_orgs.py  admin_users.py  alerts.py  analytics.py  arbitrage.py  canonical_data_service.py  (+33 more)
app-api/config/: README.md
app-api/scripts/: README.md  __init__.py  drain_connector_connection.py  ingest_file.py  integration_sync_worker.py  medallion_backfill.py  medallion_orchestrator.py  medallion_pipeline.py  medallion_pipeline_base.py  medallion_pipeline_bronze.py  medallion_pipeline_features.py  medallion_pipeline_quality.py  medallion_quarantine.py  medallion_replay.py  medallion_reprocessing_common.py  numpy_helpers.py  push_tabular_source.py  run_inference_job.py  seed_demo_data.py  seed_full_demo.py
app-api/tests/: README.md  __init__.py  test_data_engine_core.py  test_decision_contracts.py  test_gold_live_data_resolution.py  test_health.py  test_integration_core.py  test_integration_event_ingestor.py  test_integration_runtime_worker.py  test_integration_sftp_runtime_worker.py  test_integration_sync_queue_worker.py  test_medallion_pipeline_base.py  test_medallion_pipeline_features.py  test_medallion_pipeline_quality.py  test_medallion_reprocessing.py  test_org_provisioning.py  test_provider_sync_blue_yonder.py  test_provider_sync_cdk.py  test_provider_sync_fourth.py  test_provider_sync_geotab.py  test_provider_sync_manhattan.py  test_provider_sync_ncr_aloha.py  test_provider_sync_olo.py  test_provider_sync_oracle_tm.py  test_provider_sync_reynolds.py  test_provider_sync_salesforce.py  test_provider_sync_sap_tm.py  test_provider_sync_toast.py  test_provider_sync_ukg.py  test_security_hardening.py  test_telemetry.py
(+2894 files in other folders)
