[project]
name = "praedixa-api"
version = "0.1.0"
description = "Praedixa Data/ML Engine — medallion pipeline and inference jobs"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "paramiko>=3.5.1",
    "strictyaml>=1.7.0",
    "psycopg[binary]>=3.1.0",
    "openpyxl>=3.1.0",
    "chardet>=5.0.0",
    "reportlab>=4.1.0",
    "cryptography>=46.0.5",
    "pillow>=12.1.1",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "pip-audit>=2.7.0",
    "pandas>=2.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TCH", "ARG", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = ["S101", "TRY003", "PLR0913", "B008", "PLC0415", "S110", "UP042", "UP046", "UP047", "RUF022", "RUF012", "RUF001", "PLW0603", "A002", "ARG001", "ARG002", "ARG005", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "SLF001", "S105", "S106", "PT011"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:starlette",
    "ignore:coroutine 'Connection._cancel' was never awaited:RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/services/gold_live_data.py"]

[tool.coverage.report]
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
    "def __repr__",
]

[tool.deptry]
known_first_party = ["app"]
exclude = [
    ".venv",
    "__pycache__",
    "alembic/versions",
    "tests",
]
package_module_name_map = { "PyJWT" = "jwt" }

[tool.deptry.per_rule_ignores]
DEP001 = ["hatchling"]
DEP002 = [
    "asyncpg",
    "pillow",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "factory-boy",
    "pip-audit",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "types-openpyxl>=3.1.5.20250919",
    "types-reportlab>=4.4.9.20260117",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
]
